<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="first_preferencescreen" >

    <org.camlistore.QRPreference
        android:key="perkeep.qr"
	    android:summary="@string/settings_qr_summary"
        android:title="@string/settings_qr_title"/>
    <EditTextPreference
        android:key="perkeep.host"
        android:persistent="true"
        android:summary="@string/settings_host_summary"
        android:title="@string/settings_host_title" />
    <EditTextPreference
        android:key="perkeep.username"
        android:persistent="true"
        android:title="@string/settings_username_title" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="perkeep.password"
        android:persistent="true"
        android:title="@string/settings_password_title" />

    <CheckBoxPreference
        android:key="perkeep.auto"
        android:persistent="true"
        android:summary="@string/settings_auto_summary"
        android:title="@string/settings_auto" />

    <PreferenceScreen
        android:key="perkeep.auto.opts"
        android:title="Auto-upload settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="perkeep.auto.photos"
            android:persistent="true"
            android:title="Photos (DCIM/Camera/)" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="perkeep.auto.mytracks"
            android:persistent="true"
            android:title="MyTracks exports" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="perkeep.auto.require_wifi"
            android:persistent="true"
            android:summary="Wait for Wifi to auto-upload"
            android:title="Require Wifi" />
        <EditTextPreference
            android:key="perkeep.auto.required_wifi_ssid"
            android:persistent="true"
            android:singleLine="true"
            android:summary="Restrict auto-upload to this SSID"
            android:title="@string/settings_auto_required_ssid" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="perkeep.auto.require_power"
            android:persistent="true"
            android:summary="Wait until charging to auto-upload"
            android:title="Require Power" />
    </PreferenceScreen>

    <EditTextPreference
        android:key="perkeep.max_cache_mb"
        android:numeric="integer"
        android:persistent="true"
        android:singleLine="true"
        android:title="@string/settings_max_cache_size_title" />

    <EditTextPreference
        android:key="perkeep.dev_ip"
        android:phoneNumber="true"
        android:persistent="true"
        android:singleLine="true"
        android:title="@string/settings_dev_ip" />
    
</PreferenceScreen>
